# agentic-memory-mcp

./: .gitignore  LICENSE  README.md  cli_bridge.py  memory_scores.json  plugin.yaml  pyproject.toml
.github/workflows/: publish.yml
skills/agentic-memory/: SKILL.md
src/agentic_memory/: api.py
src/agentic_memory/cli/: main.py
src/agentic_memory/core/: __init__.py  graph.py  prune.py  score.py
src/agentic_memory/hermes/: __init__.py  __main__.py  cli.py
src/agentic_memory/mcp/: server.py
src/agentic_memory/skills/: memory.py
tests/: test_cli.py  test_graph.py  test_hermes_provider.py  test_prune.py  test_score.py
