[project]
name = "agentic-memory-mcp"
version = "0.4.1"
description = "Agentic Memory Management via MCP — Knowledge Graph for AI agents"
readme = "README.md"
authors = [
    { name = "Alexandre Rodenas", email = "alexandrerodenas@users.noreply.github.com" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "memory", "knowledge-graph", "agentic", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.3.3",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "mcp[cli]>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_memory"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
memory-mcp = "agentic_memory.mcp.server:run"
memory-cli = "agentic_memory.cli.main:cli"

[project.entry-points."hermes.memory"]
agentic-memory = "agentic_memory.hermes:setup"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
